--- a/Dasar Pemrograman Web/index.html
+++ b/Dasar Pemrograman Web/index.html
@@ -18,7 +18,7 @@
         <div class="Container">
             <h2>Biodata Diri</h2>
             <div class="foto">
-                <img src="foto.jpeg" alt="">
+                <img src="img/foto.jpeg" alt="">
             </div>
             <div class="conten">
             <table class="text">
