--- a/Dasar Pemrograman Web/sosmed.html
+++ b/Dasar Pemrograman Web/sosmed.html
@@ -18,10 +18,10 @@
         <div class="Contact">
             <h2>Dinda Ravi Algifari</h2>
             <p style="text-align: left;">Kunjungi sosial media saya dengan menekan gambar :</p>          
-            <a href="https://wa.me/085723850567"><img src="wa.png" alt="wa" class="sosmed"></a>
-            <a href="https://www.instagram.com/ravialgifari/"><img src="ig.jpg" alt="ig" class="sosmed"></a>
-            <a href="mailto:dinda.ravi.algifari@outlook.com"><img src="outlook.png" alt="outlook" class="sosmed"></a>
-            <a href="sms:+6285723850567"><img src="sms.png" alt="sms" class="sosmed"></a>
+            <a href="https://wa.me/085723850567"><img src="img/wa.png" alt="wa" class="sosmed"></a>
+            <a href="https://www.instagram.com/ravialgifari/"><img src="img/ig.jpg" alt="ig" class="sosmed"></a>
+            <a href="mailto:dinda.ravi.algifari@outlook.com"><img src="img/outlook.png" alt="outlook" class="sosmed"></a>
+            <a href="sms:+6285723850567"><img src="img/sms.png" alt="sms" class="sosmed"></a>
         </div>
         
         <div class="Footer">
