--- a/Dasar Pemrograman Web/index.html
+++ b/Dasar Pemrograman Web/index.html
@@ -8,6 +8,7 @@
         <script type="text/javascript" src="javascript.js"></script>
     </head>
     <body>
+        <div class="box">
         <div class="Header">
             <p>Selamat Datang</p>
         </div>
@@ -51,7 +52,7 @@
         <div class="Footer">
             <p style="text-align: right;">ditulis : Agustus 2019</p>
             <p>copyright &copy; 2019 - Dinda Ravi Algifari.</p>
-            
+        </div>
         </div>
     </body>
 </html>
