--- a/Dasar Pemrograman Web/sosmed.html
+++ b/Dasar Pemrograman Web/sosmed.html
@@ -8,6 +8,7 @@
         <script type="text/javascript" src="javascript.js"></script>
     </head>
     <body>
+        <div class="box">
         <div class="Header">
             <p>Sosial Media</p>
         </div>
@@ -28,6 +29,7 @@
             <p style="text-align: right;">ditulis : Agustus 2019</p>
             <p>copyright &copy; 2019 - Dinda Ravi Algifari.</p>
 
+        </div>
         </div>
     </body>
 </html>
