--- a/Dasar Pemrograman Web/sosmed.html
+++ b/Dasar Pemrograman Web/sosmed.html
@@ -3,12 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Biodata</title>
+        <title>Sosial Media</title>
         <link rel="stylesheet" href="style.css">
         <script type="text/javascript" src="javascript.js"></script>
     </head>
     <body>
-        <div class="box">
         <div class="Header">
             <p>Sosial Media</p>
         </div>
@@ -19,17 +18,16 @@
         <div class="Contact">
             <h2>Dinda Ravi Algifari</h2>
             <p style="text-align: left;">Kunjungi sosial media saya dengan menekan gambar :</p>          
-            <a href="https://wa.me/085723850567"><img src="img/wa.png" alt="wa" class="sosmed"></a>
-            <a href="https://www.instagram.com/ravialgifari/"><img src="img/ig.jpg" alt="ig" class="sosmed"></a>
-            <a href="mailto:dinda.ravi.algifari@outlook.com"><img src="img/outlook.png" alt="outlook" class="sosmed"></a>
-            <a href="sms:+6285723850567"><img src="img/sms.png" alt="sms" class="sosmed"></a>
+            <img src="img/wa.png" alt="wa" class="sosmed" onclick="klik('WA');">
+            <img src="img/ig.jpg" alt="ig" class="sosmed" onclick="klik('IG');">
+            <img src="img/outlook.png" alt="outlook" class="sosmed" onclick="klik('Outlook');">
+            <img src="img/sms.png" alt="sms" class="sosmed" onclick="klik('Sms');">
         </div>
         
         <div class="Footer">
             <p style="text-align: right;">ditulis : Agustus 2019</p>
             <p>copyright &copy; 2019 - Dinda Ravi Algifari.</p>
 
-        </div>
         </div>
     </body>
 </html>
